# QtAutoClicker

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  QtAutoClicker.desktop  README.md  backend.cpp  backend.h  evdevworker.cpp  hotkeyedit.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc
src/: backend.cpp  backend.h  evdevworker.cpp  evdevworker.h  hotkeyedit.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
